force-app/main/default/objects/OneCRM__Default_Campaign_Status__mdt/OneCRM__Default_Campaign_Status__mdt.object-meta.xml
<CustomObject>
    <label>Default Campaign Status</label>
    <pluralLabel>Default Campaign Statuses</pluralLabel>
</CustomObject>