force-app/main/default/objects/OneCRM__Default_Campaign_Status__mdt/fields/OneCRM__HasResponded__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__HasResponded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasResponded</label>
    <type>Checkbox</type>
</CustomField>