force-app/main/default/objects/OneCRM__Default_Campaign_Status__mdt/fields/OneCRM__IsActive__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>