force-app/main/default/objects/OneCRM__Default_Campaign_Status__mdt/fields/OneCRM__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDefault</label>
    <type>Checkbox</type>
</CustomField>