force-app/main/default/objects/OneCRM__Default_Campaign_Status__mdt/fields/OneCRM__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__SortOrder__c</fullName>
    <label>SortOrder</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>